testfx/errors/error_tests/err_20_multiple_errors.fx
// 测试20: 多错误测试 - 一个文件中多个错误
a := 
b := 10 + 
c := [1, 2,
